--- a/VRChat/55/1034955.html
+++ b/VRChat/55/1034955.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "jOMi8//UcTkMIF6d87Sv0hVqP2EqWVgunc+SIZuIbbo="></script>
+    "CRyT8Gcqrl9kTzwDdWS3dtG59itBEM4ffTyTixh49Xw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「豚の鼻」","description":"3Dモデル「豚の鼻」\nありそうでなかった「豚の鼻」\nVRChatでの使用を想定して作りました。\nほかの用途で使用してもＯＫです。\n\n自分に着けてもよし！\nカワイイあの子に着けてもよし！\nアクセサリーにしてもよし！\n遊び方無限大！\n\n更にポリゴン数と鼻の形が違う６種類が同梱！\nシェイプキーも３種類ついてます。\n用途に合わせて使い分けよう！","url":"https://booth.pm/ja/items/1034955","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/6fafd09f-818a-4190-9bd5-a575b372774f/i/1034955/64c7621a-8bc4-4ba9-b38b-0c8195e1a432_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jOMi8//UcTkMIF6d87Sv0hVqP2EqWVgunc+SIZuIbbo="></script>
+    nonce="CRyT8Gcqrl9kTzwDdWS3dtG59itBEM4ffTyTixh49Xw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -537,9 +537,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
