--- a/VRChat/98/1034698.html
+++ b/VRChat/98/1034698.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7gHl9AtHMtgp0yQxzwFy11gWTabDT4NJC4a8j32mwl8="></script>
+    "dFvv3DXm8A91yeAEzmuTDj27cW73y1KjjsrVsF+WGho="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"試製軽合金忍刀  八式一型【オリジナル3Dモデル】","description":"【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n制作者:Tokunaga_ac\n\n\n同梱のunity packageはマテリアル、トレイル等セットアップ済み\n\n\n\n2018/11/08\n\n発光用テクスチャを追加しました\n緑部分の一部が光ります。光らせたい場合はマテリアルのAlbedoをT8C1_Base_EmVer.pngに差し替え、Emissionにチェックを入れ、T8C1_Emissive.pngを適用してください。\n\n\n【内容物】\n\n■Unity package\nT8C1.unitypackage\n\n■フォルダ\nT8C1_contents\n　unitypackageに含まれているFBX、テクスチャデータ\n\n\n\n\n◆◇◆【利用規約】◆◇◆\n\nhttps://docs.google.com/document/d/1L3RhJVXeK9gEyJG3I2trR6v0SWS8bVYIy4ju1dvHKwY/edit?usp=sharing\n\n\n\n\n\n【連絡先】\n\nTwitter:Tokunaga_ac\nDiscord:Tokunaga_ac#3200\nEmail  :atelieralca01@gmail.com","url":"https://booth.pm/ja/items/1034698","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1034698/ad524f18-090a-4188-b30e-4a2aeac4b439_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7gHl9AtHMtgp0yQxzwFy11gWTabDT4NJC4a8j32mwl8="></script>
+    nonce="dFvv3DXm8A91yeAEzmuTDj27cW73y1KjjsrVsF+WGho="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      478
+                                      479
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -199,7 +199,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      478
+                                      479
                                     </div>
                                   </div></a>
                                 </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
