--- a/VRChat/82/1033682.html
+++ b/VRChat/82/1033682.html
@@ -78,7 +78,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Z7uhQHqsHClUMvljB9xhNnPpVEMIIHbXNDKIBSVuQUk="></script>
+    "DAPlKJ6D8DokHrz+OKr8EdV449InIhaufDLVAHWQc6Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"宇宙寿司　(板前付き)","description":"宇宙寿司4貫　と　それを握った日本人","url":"https://booth.pm/ja/items/1033682","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"400"},"image":"https://booth.pximg.net/c/620x620/f9123ecc-aaaf-46a9-8900-6a84c4afd3c4/i/1033682/1c5696ba-e60f-4131-87a2-5fc1e409bf47_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z7uhQHqsHClUMvljB9xhNnPpVEMIIHbXNDKIBSVuQUk="></script>
+    nonce="DAPlKJ6D8DokHrz+OKr8EdV449InIhaufDLVAHWQc6Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -484,9 +484,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
