--- a/VRChat/80/1033780.html
+++ b/VRChat/80/1033780.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "43H6rCzLBZg5ohdHfz3LJwvE2qjyindJ7f0zq2JF6eY="></script>
+    "oYJk4onXDZYhHESKULa5se8j92KuQs3G5GcxlLODGTI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"THE VR WORLD NEVER SLEEP","description":"この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。\n","url":"https://booth.pm/ja/items/1033780","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1850","highPrice":"1850"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1033780/22ced4e1-796a-4514-85a2-590e79764d3e_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="43H6rCzLBZg5ohdHfz3LJwvE2qjyindJ7f0zq2JF6eY="></script>
+    nonce="oYJk4onXDZYhHESKULa5se8j92KuQs3G5GcxlLODGTI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -673,9 +673,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
