--- a/VRChat/79/1033479.html
+++ b/VRChat/79/1033479.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gFVngEWqCSHhghOkv0/mKdXuuC1qtH4J8r0ZDBobjy0="></script>
+    "8gCXbY+gyXxqsPR89ue3FSBhNxpqr57ArbyU/YLpHxU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【武器】簡潔銃剣トラッキングソードガン【ローポリ】","description":"剣型ゲームコントローラ風ややローポリゴン3Dモデル「簡潔刀剣トラッキングソード」\n拳銃型ゲームコントローラ風ややローポリゴン3Dモデル「簡潔拳銃トラッキングマグナム」\n上記2種の3Dモデルのセット「簡潔銃剣トラッキングソードガン」です。\nVRChat等の自作3Dモデルを使用可能なゲームでご利用いただけます。\n完全自作のゲーム等でご利用いただけます。\nバーチャルYouTuber等の配信者のアバター等にご利用いただけます。\n3Dモデルデータおよび画像データは自由に改変してご利用いただけます。\n\nダウンロードしたファイル「tracking_sword_magnum.zip」には以下のデータが含まれます。\n・tracking_magnum.fbx\n　→拳銃型3Dモデルのデータです。ポリゴン数は△286です。\n・tracking_magnum_texture.png\n　→tracking_magnum.fbxのテクスチャとなる画像データです。\n・tracking_magnum_uvmap.png\n　→tracking_magnum.fbxのUV配置を示した画像データです。\n・tracking_sword.fbx\n　→剣型3Dモデルのデータです。ポリゴン数は△188です。\n・tracking_sword_texture.png\n　→tracking_sword.fbxのテクスチャとなる画像データです。\n・tracking_sword_uvmap.png\n　→tracking_sword.fbxのUV配置を示した画像データです。\n\nこのデータの内容を予告なく変更する場合があります。\nこのデータの配布を予告なく中止する場合があります。\nこのデータの再配布を禁止します。\nこのデータの再販売を禁止します。\n0hmoriは、このデータを使用して生じたいかなる損害等について、一切責任を負いません。","url":"https://booth.pm/ja/items/1033479","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8cb4421e-f2e1-45d8-add4-b0798304ddd9/i/1033479/6890e18e-5deb-4323-be31-3533bf994e1e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gFVngEWqCSHhghOkv0/mKdXuuC1qtH4J8r0ZDBobjy0="></script>
+    nonce="8gCXbY+gyXxqsPR89ue3FSBhNxpqr57ArbyU/YLpHxU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
