--- a/VRChat/20/1033320.html
+++ b/VRChat/20/1033320.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "m3goVOPhPMKi9Nj5AveuHX1/aw76eNBZs80uAlMfdGo="></script>
+    "o4bUFT1CfUJl5ebnqNdFGkztw6eDnooZgwj/4T3NFuU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル武器「軽量合金製機動防盾」","description":"※有償版と無償版の違いはありません。\n\n\n防弾性能に優れた盾です。\n見た目とは裏腹に軽量ですので機動戦闘に持ち込めます。\nこの防御力は貴方に訪れる危機から幾度となく守り抜くでしょう。\n\nポリゴン数：840\n\n【利用規約】\n下記規約を確認の上、ご自由にお使いください。\n\n◆禁止事項\n・本データの未改変での再配布禁止\n（本商品に付属する全てのデータの再配布は未改変の場合、禁止します。\n　なお、VRC等で利用するためのデータアップロード、アバターペデスタルへの利用はこれに該当しません。）\n・本データの販売の禁止（改変・未改変関わらず）\n・作者を偽る行為の禁止\n・特定個人や団体への中傷を目的とした利用を禁止。\n\n◆利用可能\n・データ改変\n・データ改変した上での再配布\n・商用動画等の利用\n・R-18、R-18G等での使用\n・VRC、Vワールド、バーチャルキャスト等での使用\n\n【連絡先】\nTwitter:@VR_H_Chiharu\nmail:project.vr.otokonoko@gmail.com\nYouTube：https://www.youtube.com/channel/UCA47QiACqc5fseh7bS2dqdA","url":"https://booth.pm/ja/items/1033320","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/1703feb1-3834-4bc6-959f-543e3e223494/i/1033320/47c8a64b-dd1a-46d0-9970-b6c30d51ecb5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="m3goVOPhPMKi9Nj5AveuHX1/aw76eNBZs80uAlMfdGo="></script>
+    nonce="o4bUFT1CfUJl5ebnqNdFGkztw6eDnooZgwj/4T3NFuU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -453,9 +453,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
